--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
     <script language="javascript" type="text/javascript" src="lib/taira.js"></script>
     <script language="javascript" type="text/javascript" src="system_settings.js"></script>
-    <script language="javascript" type="text/javascript" src="music_starter.js"></script>
+    <script language="javascript" type="text/javascript" src="tunnel_loop.js"></script>
     <script language="javascript" type="text/javascript" src="system_runner.js"></script>
 
     <style>
-        body   { padding: 0; margin: 0; }
+        html, body   { padding: 0; margin: 0; overflow: hidden }
         .inner { position: absolute; }
         #controls {
             font: 300 12px "Helvetica Neue";
