--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script language="javascript" type="text/javascript" src="system_runner.js"></script>
 
     <style>
-        html, body   { padding: 0; margin: 0; overflow: hidden }
+        /*html, body   { padding: 0; margin: 0; overflow: hidden }*/
         .inner { position: absolute; }
         #controls {
             font: 300 12px "Helvetica Neue";
