Cleans up files

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 
     <!-- CUSTOM CODE FILE -->
     <script language="javascript" type="text/javascript" src="water_circles.js"></script>
+    <!-- The two JS files below are two different types of music visualiser
+    that I was testing, but I went with the one above -->
     <!--    <script language="javascript" type="text/javascript" src="tunnel_loop.js"></script>-->
     <!--    <script language="javascript" type="text/javascript" src="speaker.js"></script>-->
-    <!--    <script language="javascript" type="text/javascript" src="guitar_twangs.js"></script>-->
     <!-- END CUSTOM CODE -->
     <style>
         html, body {
@@ -26,8 +27,8 @@
 
         #controls {
             font: 300 12px "Helvetica Neue";
-            padding: 5;
-            margin: 5;
+            padding: 5px;
+            margin: 5pxs;
             background: #f0f0f0;
             opacity: 0.0;
             -webkit-transition: opacity 0.2s ease;
